--- a/config.json
+++ b/config.json
@@ -1,9 +1,7 @@
 {
-    "ownerNumber": ["6285342106390@s.whatsapp.net","622150996855@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "Haruka-Mdོ ",
-    "footer": "api.zeeoneofc.xyz",
+    "ownerNumber": ["6288291551330@s.whatsapp.net","622150996855@s.whatsapp.net"],
+    "ownerName": "ᴹᴿ᭄ Aldi Botz ×፝֟͜×",
+    "botName": "Aldi Botz",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
     "BotKey": "V12",
