--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "ownerNumber": ["6288291551330@s.whatsapp.net","622150996855@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ Aldi Botz ×፝֟͜×",
+    "ownerNumber": ["6288291551330@s.whatsapp.net"
+    "ownerName": "ᴹᴿ᭄ Aldi Store ×፝֟͜×",
     "botName": "Aldi Botz",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
